Link with database

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,15 +15,15 @@
             <div class="nav_wrapper">
                 <ul>
                     <li>
-                        <a href="/" class = "left brand-logo">There and Back Again</a>
+                        <a href="{%url 'home'%}" class = "left brand-logo">There and Back Again</a>
                     </li>
                 </ul>
                 <ul class="right">
                     <li>
-                        <a href="/about">About</a>
+                        <a href="{%url 'about'%}">About</a>
                     </li>
                     <li>
-                        <a href="/destinations">View the Travel Log!</a>
+                        <a href="{%url 'index'%}">View the Travel Log!</a>
                     </li>
                 </ul>
             </div>
