--- a/main_app/templates/destinations/index.html
+++ b/main_app/templates/destinations/index.html
@@ -5,17 +5,28 @@
 <h1>Destination List</h1>
 {% for destination in destinations%}
 <div class="card">
-    <div class="card-content">
-        <span class="card-title"> {{destination.location}}</span>
-        <span class="card-subtitle"> {{destination.country}}</span>
-        <p>Rating: {{destination.rating}}/10</p>
-        <p>Visited on: {{destination.date}}</p>
-        {% if destination.comment %}
-            <p>Thoughts: {{destination.comment}}</p>
-        {% else %}
-            <p>No comment.</p>
-        {% endif %}
-    </div>
+    <a href="{%url 'detail' destination.id%}"> 
+        <div class="card-content">
+            <div class="flex-container">
+                <div>
+                    <span class="card-title"> {{destination.location}}</span>
+                    <span class="card-subtitle"> {{destination.country}}</span>
+                    <p>Rating: {{destination.rating}}/10</p>
+                    <p>Visited on: {{destination.date}}</p>
+                    {% if destination.comment %}
+                        <p>Thoughts: {{destination.comment}}</p>
+                    {% else %}
+                        <p>No comment.</p>
+                    {% endif %}
+                </div>
+
+
+                <div class="right">
+                    <img width = '128x' height = '128px' src="{{destination.picture}}"/>
+                </div>
+            </div>
+        </div>
+    </a>
 </div>
 
 {% endfor %}
