--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -18,3 +18,8 @@ footer.page-footer {
     display: flex;
     justify-content: space-between;
 }
+
+.picture {
+    border-radius: 10px;
+    border: 5px solid black;
+}
