--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>There and Back Again</title>
 </head>
 <body>
@@ -21,6 +22,9 @@
                 <ul class="right">
                     <li>
                         <a href="{%url 'about'%}">About</a>
+                    </li>
+                    <li>
+                        <a href="{%url 'destination_create'%}">Add a Country</a>
                     </li>
                     <li>
                         <a href="{%url 'index'%}">View the Travel Log!</a>
