reorientation of the site and model structure

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -24,7 +24,7 @@
                         <a href="{%url 'about'%}">About</a>
                     </li>
                     <li>
-                        <a href="{%url 'destination_create'%}">Add a Country</a>
+                        <a href="{%url 'country_create'%}">Add a Country</a>
                     </li>
                     <li>
                         <a href="{%url 'index'%}">View the Travel Log!</a>
