--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -2,5 +2,5 @@
 {% block content %}
 <h1>About <i>There and Back Again</i></h1>
 <hr>
-<p>This is a webpage that collects the list of travel desinations visited and visualises them on a map!</p>
+<p>This is a webpage that collects a list of countries and destinations visited with and maybe visualises them on a map!</p>
 {% endblock %}
