--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,6 +29,12 @@
                     <li>
                         <a href="{%url 'index'%}">View the Travel Log!</a>
                     </li>
+                    <li>
+                        <a href="{%url 'highlights_create'%}">Add a Highlight</a>
+                    </li>
+                    <li>
+                        <a href="{%url 'highlights_index'%}">View all Highlights!</a>
+                    </li>
                 </ul>
             </div>
         </nav>
