--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -23,18 +23,35 @@
                     <li>
                         <a href="{%url 'about'%}">About</a>
                     </li>
-                    <li>
-                        <a href="{%url 'country_create'%}">Add a Country</a>
-                    </li>
-                    <li>
-                        <a href="{%url 'index'%}">View the Travel Log!</a>
-                    </li>
-                    <li>
-                        <a href="{%url 'highlights_create'%}">Add a Highlight</a>
-                    </li>
-                    <li>
-                        <a href="{%url 'highlights_index'%}">View all Highlights!</a>
-                    </li>
+                    {% if user.is_authenticated %}
+                        <li>
+                            <a href="{%url 'country_create'%}">Add a Country</a>
+                        </li>
+                        <li>
+                            <a href="{%url 'index'%}">View the Travel Log!</a>
+                        </li>
+                    {% endif %}
+                    {% if user.is_authenticated %}
+                        <li>
+                            <a href="{%url 'highlights_create'%}">Add a Highlight</a>
+                        </li>
+                        <li>
+                            <a href="{%url 'highlights_index'%}">View all Highlights!</a>
+                        </li>
+                    {% endif %}
+                    {% if user.is_authenticated %}
+                        Hi {{user.username}}
+                        <li>
+                            <a href="{%url 'logout' %}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <a href="{%url 'signup' %}">Sign up</a>
+                        </li>
+                        <li>
+                            <a href="{%url 'login' %}">Login</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
