--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -6,6 +6,6 @@
     {%csrf_token%}
     {{form.as_p}}
     <input type="submit" value="login" class="btn">
-    <input type="hidden" name="text" value="{{next}}">
+    <input type="hidden" name="next" value="{{next}}">
 </form>
 {%endblock%}
