--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -10,6 +10,6 @@
     {%csrf_token%}
     {{form.as_p}}
     <input type="submit" value="signup" class="btn">
-    <input type="hidden" name="text" value="{{next}}">
+    <input type="hidden" name="next" value="{{next}}">
 </form>
 {%endblock%}
