--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -2,5 +2,8 @@
 {% block content %}
 <h1>About <i>There and Back Again</i></h1>
 <hr>
-<p>This is a webpage that collects a list of countries and destinations visited with and maybe visualises them on a map!</p>
+<p>Your one-stop destination for real experiences and real reviews for travel destinations around the world.</p>
+<p>Thinking of travelling? See what places rate the highest!</p>
+<p>Just been travelling? Leave a review to help other people decide where to go next</p>
+<p>Not sure what you'd like? Browse user-created tags, or create your own!</p>
 {% endblock %}
