--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -5,7 +5,5 @@
 <h1>There and Back Again</h1>
 <hr>
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem laudantium eos labore, culpa aut natus voluptatum consequuntur ipsum modi temporibus, repudiandae odit qui nam tenetur distinctio obcaecati ab, facilis cupiditate?
-
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente suscipit a ipsa hic dolore rem culpa, veritatis amet quibusdam nulla magnam, ipsam nobis eos porro harum quam enim odit quisquam aliquam ex, laborum quae. Facere, vel magni. Eveniet tenetur, deleniti rerum tempore nisi doloribus suscipit ea necessitatibus ipsum at nam ex, ab vitae voluptatibus eligendi provident. Delectus repellat nulla animi voluptas quasi voluptatibus modi explicabo, incidunt unde harum mollitia quidem accusamus nam, odit dolorum necessitatibus sit libero facere esse laudantium nemo! Quidem corporis consequatur eligendi dolorum. Facilis nulla doloremque sapiente molestiae, nam iure itaque beatae sed cumque ratione, nihil et!
+5-star crowd-sourced travel reviews.
 {% endblock %}
