--- a/main_app/templates/main_app/country_form.html
+++ b/main_app/templates/main_app/country_form.html
@@ -19,7 +19,10 @@
     {% endif %}
 </form>
 
-
+<script>
+    let selectEl = document.getElementById("id_country");
+    M.FormSelect.init(selectEl);
+    </script>
 
 
 {% endblock %}
