--- a/main_app/templates/countries/index.html
+++ b/main_app/templates/countries/index.html
@@ -15,7 +15,7 @@
                     <p>Based on {{country.review_set.all|length}} reviews.</p>
                     {%else%}
                     <p>There are no reviews for this country yet.</p>
-                    <p>Click here to review the country and add a review.</p>
+                    <p>Click here to view the country and add a review.</p>
                     {%endif%}
                 </div>
 
