--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -5,5 +5,8 @@
 <h1>There and Back Again</h1>
 <hr>
 
-5-star crowd-sourced travel reviews.
+<p>5-star crowd-sourced travel reviews.</p>
+<p>Simply browse through the list of countries, write a review (including details on where you visited) and post a rating. You can edit or delete your reviews if needed.</p>
+<p>Additionally, you can assign some user-made highlights to help people more easily find the experience they are looking for.</p>
+<p>Clicking on a highlight will show you all the countries that have that highlight.</p>
 {% endblock %}
